Fix remaining spacing issues in UserLogin

--- a/client/src/styles/UserLogin.css
+++ b/client/src/styles/UserLogin.css
@@ -261,8 +261,8 @@
 }
 
 .admin-link-section {
-  margin-top: 30px;
-  padding-top: 25px;
+  margin-top: 15px;
+  padding-top: 0;
   text-align: center;
   width: 100%;
   box-sizing: border-box;
